# infinitydb

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml
.artifacts/m0/1781227039-gate-run/: report.md
.artifacts/m0/1781227231-gate-run/: report.md
.artifacts/m0/1781244111-gate-run/: report.md
.artifacts/m0/1781249510-gate-run/: report.md
.artifacts/m0/1781253562-gate-run/: report.md
.artifacts/m0/1781300794-gate-run/: report.md
.artifacts/m0/2026-06-11-linux-devbox/: buffer-lifecycle-storm-uring.txt  compat-diff-v0.txt  fuzz-fabric-codec-1h.txt  fuzz-resp-parse-1h.txt  gate-run-full-output.txt  miri-alloc-fabric.txt  sim-dst-skeleton.txt  spsc-ring-bench-pinned.txt  spsc-ring-perf-c2c.txt  store-pipeline-overhead-bench.txt  tripwire-ab-overhead.txt  tripwire-canary.txt  uring-echo-bench.txt  wire-parse-dispatch-bench.txt
.artifacts/m0/2026-06-12-linux-devbox/: comparator-dragonfly.txt  cross-cell-remediation-ab.txt  gate-run-amended-output.txt  gate-run-full-output.txt  gate-run-r1-output.txt  perf-local-dso.txt  perf-local-self.txt  perf-natural-dso.txt  perf-natural-self.txt  r1-remediation-ab.txt  syscall-share-flamegraph.txt
.artifacts/m1/1781312498-gate-run/: report.md
.artifacts/m1/1781312636-gate-run/: report.md
.github/workflows/: infinity-bench-weekly.yml  infinity-ci.yml  infinity-dst-nightly.yml  infinity-release.yml
bins/inf/: Cargo.toml
bins/inf-bench/: Cargo.toml  README.md
bins/inf-bench/src/: cli.rs  envcheck.rs  gaterun.rs  gates.rs  load.rs  m1rows.rs  main.rs  resp.rs  zipfian.rs
bins/inf-sim/: Cargo.toml  README.md
bins/inf-sim/seeds/: corpus.txt
bins/inf-sim/src/: harness.rs  lib.rs  main.rs  net.rs  resp.rs
bins/inf-sim/tests/: corpus.rs  sim.rs
bins/inf/src/: main.rs  reply.rs
bins/infinityd/: Cargo.toml  build.rs
bins/infinityd/src/: main.rs
crates/inf-alloc/: Cargo.toml  SAFETY.md
crates/inf-alloc/src/: arena.rs  buffer_pool.rs  lib.rs
crates/inf-compute/: Cargo.toml
crates/inf-compute/src/: lib.rs
crates/inf-doc/: Cargo.toml
crates/inf-doc/src/: lib.rs
crates/inf-fabric/: Cargo.toml  SAFETY.md  build.rs
crates/inf-fabric/benches/: ring.rs
crates/inf-fabric/fuzz/: Cargo.toml
crates/inf-fabric/fuzz/corpus/fabric_codec/: crash-91686456affeac17d4a2e5148acf9f5f9c6c8698
crates/inf-fabric/fuzz/fuzz_targets/: fabric_codec.rs
crates/inf-fabric/src/: codec.rs  lib.rs  mesh.rs  msg.rs  ring.rs
crates/inf-fabric/tests/: mesh.rs
crates/inf-foundation/: Cargo.toml
crates/inf-foundation/src/: crc.rs  hash.rs  hist.rs  ids.rs  lib.rs  local.rs  rng.rs  time.rs  tripwire.rs  varint.rs
crates/inf-log/: Cargo.toml
crates/inf-log/src/: lib.rs
crates/inf-replica/: Cargo.toml
crates/inf-replica/src/: lib.rs
crates/inf-runtime/: Cargo.toml  README.md  SAFETY.md
crates/inf-runtime/benches/: executor.rs  uring_echo.rs
crates/inf-runtime/src/: driver.rs  executor.rs  gate.rs  kqueue.rs  lib.rs  net.rs  reactor.rs  sched.rs  timer.rs  token.rs  uring.rs
crates/inf-runtime/tests/: driver_conformance.rs  executor.rs  reactor.rs
crates/inf-server/: Cargo.toml
crates/inf-server/fuzz/: Cargo.toml
crates/inf-server/fuzz/fuzz_targets/: glob_match.rs  scan_cursor.rs
crates/inf-server/src/: admin.rs  clients.rs  config.rs  exec.rs  glob.rs  lib.rs  plane.rs  pubsub.rs
crates/inf-server/tests/: node_e2e.rs
crates/inf-simd/: Cargo.toml  SAFETY.md
crates/inf-simd/src/: crlf.rs  group16.rs  lib.rs  swar.rs
crates/inf-store/: Cargo.toml
crates/inf-store/benches/: store.rs
crates/inf-store/src/: evict.rs  index.rs  keyspace.rs  lib.rs  ns.rs  record.rs  router.rs  store.rs  wheel.rs
crates/inf-store/tests/: evict.rs  expiry.rs  scan_guarantee.rs  store_oracle.rs
crates/inf-stream/: Cargo.toml
crates/inf-stream/src/: lib.rs
crates/inf-vector/: Cargo.toml
crates/inf-vector/src/: lib.rs
crates/inf-wire/: Cargo.toml
crates/inf-wire/benches/: wire.rs
crates/inf-wire/fuzz/: Cargo.toml
crates/inf-wire/fuzz/fuzz_targets/: resp_parse.rs
crates/inf-wire/src/: command.rs  lib.rs  parser.rs  writer.rs
crates/inf-wire/tests/: keyspec.rs  parser.rs
crates/infinity-embedded/: Cargo.toml
crates/infinity-embedded/src/: lib.rs
deploy/client-smoke/: Dockerfile
deploy/seccomp/: infinitydb-seccomp.json
docs/: README.md  architecture.md  compat-matrix.md  dep-dag.toml  deployment.md  interfaces-m0.md  roadmap.md
docs/milestones/: m0-gates.toml  m1-gates.toml
scripts/: check-cell-denylist.sh  check-dep-dag.sh  check-waker-atomics.sh
tests/client-smoke/: smoke.mjs  smoke.py
tests/client-smoke/go/: go.mod  main.go
tests/client-smoke/java/: pom.xml
tests/client-smoke/java/src/main/java/: Smoke.java
tests/compat/: Cargo.toml
tests/compat/src/: candidate.rs  lib.rs  matrix.rs  matrixgen.rs  resp.rs
tests/compat/tests/: diff.rs  matrix_artifact.rs
