[package]
name = "inf-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic whole-node simulator (DST skeleton)"

[lib]
name = "inf_sim"
path = "src/lib.rs"

[[bin]]
name = "inf-sim"
path = "src/main.rs"

[dependencies]
inf-foundation.workspace = true
inf-alloc.workspace = true
inf-fabric.workspace = true
inf-runtime.workspace = true
inf-wire.workspace = true
inf-store.workspace = true
inf-server.workspace = true
libc.workspace = true

[lints]
workspace = true
