[package]
name = "infinityd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "The InfinityDB node"

[dependencies]
inf-foundation.workspace = true
inf-alloc.workspace = true
inf-fabric.workspace = true
inf-runtime.workspace = true
inf-store.workspace = true
inf-server.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
inf-runtime = { workspace = true, features = ["uring"] }

[lints]
workspace = true
