[package]
name = "inf-alloc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
inf-foundation.workspace = true
libc.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
