[package]
name = "inf-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Per-cell records, index, string ops, slot routing"

[dependencies]
inf-foundation.workspace = true
inf-alloc.workspace = true
inf-simd.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "store"
harness = false
test = false

[lints]
workspace = true
