[package]
name = "inf-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "RESP2/3 parser + serializer + perfect-hash command dispatch"

[dependencies]
inf-foundation.workspace = true
inf-simd.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "wire"
harness = false
test = false

[lints]
workspace = true
