# cargo-fuzz crate for inf-wire (M0-S11 AC: parser fuzz, CI smoke + nightly
# hour). Standalone workspace — built only by `cargo +nightly fuzz`.
[package]
name = "inf-wire-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
inf-wire = { path = ".." }

[[bin]]
name = "resp_parse"
path = "fuzz_targets/resp_parse.rs"
test = false
doc = false
bench = false

[workspace]
